--- a/weather-data-analysis.ipynb
+++ b/weather-data-analysis.ipynb
@@ -814,7 +814,7 @@
     "plt.ylabel('Temperature at 3 PM')\n",
     "plt.title('Temperature Trend at 3 PM')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(r'C:\\Users\\MAITRI\\OneDrive\\Documents\\images/temp_3pm_trend.png')\n",
+    "plt.savefig(images/temp_3pm_trend.png)\n",
     "plt.show()"
    ]
   },
@@ -851,7 +851,7 @@
     "plt.ylabel('Frequency')\n",
     "plt.title('Rainfall Distribution')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(r'C:\\Users\\MAITRI\\OneDrive\\Documents\\images/rainfall_distribution.png')\n",
+    "plt.savefig(images/rainfall_distribution.png)\n",
     "plt.show()"
    ]
   },
@@ -893,7 +893,7 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(r'C:\\Users\\MAITRI\\OneDrive\\Documents\\images/wind_speed_trend.png')\n",
+    "plt.savefig(images/wind_speed_trend.png)\n",
     "plt.show()"
    ]
   },
